--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build project
 
 on:
   pull_request: {}
-  push: { branches: [main] }
+  push: { branches: [master] }
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -17,8 +17,7 @@ jobs:
         projectPath:
           - path/to/your/project
         unityVersion:
-          - 2019.2.11f1
-          - 2019.3.0f1
+          - 2019.4.14f1
         targetPlatform:
           - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
           - StandaloneWindows # Build a Windows standalone.
